--- a/_layouts/packages.html
+++ b/_layouts/packages.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-bodyClass: "page-services"
+bodyClass: "page-packages"
 ---
 
 <div class="intro">
@@ -20,14 +20,14 @@ bodyClass: "page-services"
 
 <div class="container pt-6 pb-6">
   <div class="row">
-    {% for service in site.services %}
+    {% for package in site.packages %}
     <div class="col-12 col-md-6 mb-3">
-      <div class="service service-summary">
-        <div class="service-content">
-          <h2 class="service-title">
-            <a href="{{ service.url | relative_url }}">{{ service.title }}</a>
+      <div class="package package-summary">
+        <div class="package-content">
+          <h2 class="package-title">
+            <a href="{{ package.url | relative_url }}">{{ package.title }}</a>
           </h2>
-          <p>{{ service.content | markdownify | strip_html | truncate: 100 }}</p>
+          <p>{{ package.content | markdownify | strip_html | truncate: 100 }}</p>
         </div>
       </div>
     </div>
