--- a/_layouts/classes.html
+++ b/_layouts/classes.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-bodyClass: "page-packages"
+bodyClass: "page-classes"
 ---
 
 <div class="intro">
@@ -20,14 +20,14 @@ bodyClass: "page-packages"
 
 <div class="container pt-6 pb-6">
   <div class="row">
-    {% for package in site.packages %}
+    {% for classe in site.classes %}
     <div class="col-12 col-md-6 mb-3">
-      <div class="package package-summary">
-        <div class="package-content">
-          <h2 class="package-title">
-            <a href="{{ package.url | relative_url }}">{{ package.title }}</a>
+      <div class="classe classe-summary">
+        <div class="classe-content">
+          <h2 class="classe-title">
+            <a href="{{ classe.url | relative_url }}">{{ classe.title }}</a>
           </h2>
-          <p>{{ package.content | markdownify | strip_html | truncate: 100 }}</p>
+          <p>{{ classe.content | markdownify | strip_html | truncate: 100 }}</p>
         </div>
       </div>
     </div>
