--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,15 +24,15 @@ bodyClass: "page-home"
 <div class="strip">
   <div class="container pt-6 pb-6 pb-md-10">
     <div class="row justify-content-start">
-      {% assign limit = site.home.limit_packages | default: 6 %}
-      {% for package in site.packages limit: limit %}
+      {% assign limit = site.home.limit_classes | default: 6 %}
+      {% for classe in site.classes limit: limit %}
       <div class="col-12 col-md-4 mb-1">
-        <div class="package package-summary">
-          <div class="package-content">
-            <h2 class="package-title">
-              <a href="{{ package.url | relative_url }}">{{ package.title }}</a>
+        <div class="classe classe-summary">
+          <div class="classe-content">
+            <h2 class="classe-title">
+              <a href="{{ classe.url | relative_url }}">{{ classe.title }}</a>
             </h2>
-            <p>{{ package.content | markdownify | strip_html | truncate: 100 }}</p>
+            <p>{{ classe.content | markdownify | strip_html | truncate: 100 }}</p>
           </div>
         </div>
       </div>
@@ -40,7 +40,7 @@ bodyClass: "page-home"
     </div>
     <div class="row justify-content-center">
       <div class="col-auto">
-        <a class="button button-primary" href="{{ "packages" | relative_url }}">View All Packages</a>
+        <a class="button button-primary" href="{{ "classes" | relative_url }}">View Main TRUST Classes</a>
       </div>
     </div>
   </div>
