--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,7 +59,7 @@ $sub-footer-text-color: $white;
 // Pages
 @import "pages/page-home";
 @import "pages/page-teams";
-@import "pages/page-package";
+@import "pages/page-classe";
 
 body {
   font-size: 16px;
