--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@
   <meta name="twitter:card" content="summary"/>
   {% if site.data.seo.meta_twitter_site %}<meta name="twitter:site" content="{{ site.seo.meta_twitter_site }}"/>{% endif %}
   {% if site.data.seo.meta_twitter_creator %}<meta name="twitter:creator" content="{{ site.seo.meta_twitter_creator }}"/>{% endif %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MOCi/AdZFSyRpZ1s5nG/j+3+/cwP5o6GnFw5kt/y9WvYvUMMtkc6RZbfFaJ8gJrC" crossorigin="anonymous">
+<link href="{{ '/assets/css/style.css' | relative_url }}" rel="stylesheet">
 
 </head>
 
@@ -36,5 +38,8 @@
   {% include sub-footer.html %}
   <script type="text/javascript" src="{{ '/assets/js/scripts.js' | relative_url }}"></script>
   {% include google-analytics.html %}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeo6xF1CjI4c7ZKgfzWlEnjH6EMr1NE6K1NfDgPkpHuRwlG8" crossorigin="anonymous"></script>
+<script type="text/javascript" src="{{ '/assets/js/scripts.js' | relative_url }}"></script>
+
 </body>
 </html>
